--- a/src/cpp/tests/CMakeLists.txt
+++ b/src/cpp/tests/CMakeLists.txt
@@ -1,5 +1,7 @@
-add_executable(tests StableTextBufferTest.cpp)
+add_executable(tests StableTextBufferTest.cpp PagedArrayTest.cpp)
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
+
+target_include_directories(tests PUBLIC ../lib_main)
 
 include(CTest)
 include(Catch)
