Create TagliatelleApp singleton

--- a/src/cpp/lib_main/CMakeLists.txt
+++ b/src/cpp/lib_main/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Create the dynamic library
 add_library(tagliatelle SHARED
-    tagliatelle.cpp
+    tagliatelle_api.cpp
+    Tagliatelle.cpp
 )
 
 # Set library properties
